--- a/nav.css
+++ b/nav.css
@@ -1,9 +1,9 @@
 /*
 Color Palette
-background color: #200439
-primary: #512C73
-secondary: #361356
-tertiary: #6F4D8F
+background color: #439A97
+primary: #62B6B7
+secondary: #97DECE
+tertiary: #CBEDD5
 accent: #9277AC
 vegasGold: #c5b358
 white: #fff
@@ -27,7 +27,7 @@ black: #000
     font-family: 'Dancing Script', cursive;
 }
 
-.navbar-link ul {
+.navbar-links ul {
     margin: 0;
     padding: 0;
     display: flex;
@@ -47,7 +47,7 @@ black: #000
 }
 
 .navbar-links li:hover {
-    background-color: #361356;
+    background-color: #97DECE;
 }
 
 .toggle-button {
