--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Color Palette
-background color: #200439
-primary: #512C73
-secondary: #361356
-tertiary: #6F4D8F
+background color: #439A97
+primary: #62B6B7
+secondary: #97DECE
+tertiary: #CBEDD5
 accent: #9277AC
 vegasGold: #c5b358
 white: #fff
@@ -20,7 +20,7 @@ body {
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
-    background-color: #200439;
+    background-color: #439A97;
     color: #fff;
 }
 
@@ -36,9 +36,9 @@ body {
 }
 
 .heroImage img {
-    border-radius: 6rem;
+    border-radius: 4rem;
     box-shadow: 10px 10px #000;
-    width: 100%;
+    width: 50%;
     height: auto;
 }
 
@@ -74,13 +74,13 @@ body {
     border-radius: 25px;
     font-size: 0.9rem;
     font-weight: 700;
-    color: #200439;
+    color: #439A97;
     text-decoration: none;
     box-shadow: 8px 8px 4px #000;
 }
 
 .button:hover {
-    background-color: #361356;
+    background-color: #97DECE;
     color: #c5b358;
     transform: scale(1.5);
     /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
@@ -95,7 +95,7 @@ body {
 
 .projectCard {
     background-color: #fff;
-    color: #200439;
+    color: #439A97;
     margin: 4rem 3rem;
     padding: 0.5rem 2rem;
     text-align: center;
