--- a/style.css
+++ b/style.css
@@ -32,14 +32,14 @@ body {
 }
 
 .heroImage {
-    padding: 2rem;
+    padding: 4rem;
 }
 
 .heroImage img {
-    border-radius: 4rem;
+    border-radius: 6rem;
     box-shadow: 10px 10px #000;
     width: 50%;
-    height: auto;
+    height: 50%;
 }
 
 .heroText {
@@ -164,7 +164,8 @@ footer {
     justify-content: center;
     align-items: center;
     margin: 0;
-    height: 80vh;
+    text-align: center;
+    padding: 2rem;
 }
 
 @media (min-width: 800px) {
